--- a/index.html
+++ b/index.html
@@ -1710,9 +1710,9 @@
                 phone: document.getElementById('phone').value.trim(),
                 visitCount: visitCount,
                 selectedMenu: selectedMenu,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
+                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null,
                 irradiationsCount: irradiationsCount,
-                dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
+                dates: selectedFullDate ? [selectedFullDate] : null,
                 message: document.getElementById('message').value.trim()
             };
 
@@ -1737,17 +1737,28 @@
                 return;
             }
 
+            // ★ irradiationsCount があるときだけ ",○○" を付ける
+            const irradiationsPart = formData.irradiationsCount
+                ? `,${formData.irradiationsCount}`
+                : '';
+
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text:
+                    `【予約フォーム】\n` +
+                    `お名前：${formData.name}\n` +
+                    `電話番号：${formData.phone}\n` +
+                    `ご来店回数：${formData.visitCount}\n` +
+                    `コース：${formData.selectedMenu}\n` +
+                    // ここで条件付きの文字列を使用
+                    `メニュー：${formData.selectedSymptom}${irradiationsPart}\n` +
+                    `希望日時：\n ${formData.dates[0]}\n` +
+                    `メッセージ：${formData.message}`
             }]).then(() => {
-                /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
-                /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
-                /* メッセージ送信失敗時の処理 */
                 console.error('メッセージの送信に失敗しました', err);
             });
         }
