--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             textarea {
                 padding: 10px;
                 margin-bottom: 10px;
-                font-size: 14px;
+                font-size: 16px;
                 border-width: 1px;
                 /* 枠線を少し細くして圧迫感を減らす */
             }
@@ -697,7 +697,7 @@
         <input type="tel" id="phone" placeholder="例：090-1234-5678" oninput="saveInput('phone')">
 
         <div class="label">ご来店人数をご記入ください<span class="required">必須</span></div>
-        <input type="text" id="visitorCount" placeholder="例：1名、2名など" oninput="saveInput('visitorCount')">
+        <input type="text" id="visitorCount" placeholder="例：1名、2名など">
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択するとカレンダーが表示されます</div>
@@ -822,13 +822,9 @@
         document.addEventListener('DOMContentLoaded', function () {
             const savedName = localStorage.getItem('name');
             const savedPhone = localStorage.getItem('phone');
-            // 追加
-            const savedVisitorCount = localStorage.getItem('visitorCount');
 
             if (savedName) document.getElementById('name').value = savedName;
             if (savedPhone) document.getElementById('phone').value = savedPhone;
-            // 追加
-            if (savedVisitorCount) document.getElementById('visitorCount').value = savedVisitorCount;
         });
 
         // スムーズスクロール
