--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,7 @@ function submitForm() {
                 visitCount: visitCount,
                 selectedMenu: selectedMenu,
         lineLimitedPrice: lineLimitedPrice,
-        hasRange: selectedHasRange  // ここでフラグを一緒に持っていく
+        hasRange: selectedHasRange,  // ここでフラグを一緒に持っていく
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 irradiationsCount: irradiationsCount,
                 dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
