--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@ function submitForm() {
             // LINEトークにメッセージを送信
     liff.sendMessages([{
         type: 'text',
-        text: `【ご予約内容】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.numberCount}\nオフの有無：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\nLINE限定料金：${linePriceText}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+        text: `【ご予約内容】\n《お名前》\n⇒${formData.name}\n《電話番号》\n⇒${formData.phone}\n《ご来店回数》\n⇒${formData.numberCount}\n\n《オフの有無》\n⇒${formData.visitCount}\n《コース》\n⇒${formData.selectedMenu}\n《メニュー》\n⇒${formData.selectedSymptom}\n《LINE限定料金》\n⇒${linePriceText}\n\n《希望日時》\n⇒${formData.dates[0]}\n《メッセージ》\n⇒${formData.message}`
     }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
