--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '2008309307-wGX8Mrxz' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -1365,11 +1365,6 @@
             // tabakoValue（吸う/吸わない）, tabakodottiValue（紙タバコ/電子タバコ）
 
             // ===== 必須チェック =====
-            if (!nameKanji) return alert('「お名前（漢字）」を入力してください。');
-            if (!nameKana) return alert('「お名前（フリガナ）」を入力してください。');
-            if (!birthYmd) return alert('「誕生日（西暦）」を入力してください。');
-            if (!tel) return alert('「電話番号」を入力してください。');
-            if (!address) return alert('「ご住所」を入力してください。');
 
             if (!chanceValue) return alert('「施術中」のご希望をお選びください。');
             if (!reasonValues.length) return alert('「当店を選んでくださった理由」をお選びください。');
