--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
         .visit-buttons button:hover,
         .week-button:hover,
         .month-button:hover {
-            background-color: #333; /* 黒 */
-            color: #fff;
-            border-color: #333;
+            background-color: #fff; /* 黒 */
+            color: #333;
+            border-color: #ccc;
             transform: none; /* 元の拡大エフェクトを削除 */
         }
         
@@ -230,8 +230,8 @@
         }
         
         .calendar td.unavailable {
-            background-color: #f0f0f0;
-            color: #ccc;
+            background-color: #b6b6b6;
+            color: #f3f3f3;
             pointer-events: none;
         }
 
@@ -347,13 +347,13 @@
             padding: 5px;
             border-radius: 4px 0 0 4px;
             z-index: 1000;
-            width: 35px;
+            width: 20px;
         }
 
         .side-nav a {
             color: white;
             text-decoration: none;
-            font-size: 12px;
+            font-size: 30px;
             margin: 5px 0;
             text-align: center;
         }
@@ -508,7 +508,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2006420189-E1XzO4RV'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
