--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@
         .symptoms button.active,
         .menu-sections button.active,
         .irradiations button.active,
-        .visit-buttons button:hover,
+        .visit-buttons button:hover {
+            background-color: #333; /* 黒 */
+            color: #fff;
+            border-color: #333;
+            transform: none; /* 元の拡大エフェクトを削除 */
+        }
+        
         .week-button:hover,
         .month-button:hover {
             background-color: #fff; /* 黒 */
@@ -152,7 +158,7 @@
             border-color: #ccc;
             transform: none; /* 元の拡大エフェクトを削除 */
         }
-        
+
         .week-button:active,
         .month-button:active {
              transform: scale(0.98);
