--- a/index.html
+++ b/index.html
@@ -703,17 +703,18 @@ async function submitForm() {
     const menu = selectedMenuData ? selectedMenuData.name : "未選択";
 
     // ★ 第三希望があるときだけ追加
-    const thirdLine = rawDate3 ? `\n第三希望：${date3}` : "";
+    const thirdLine = rawDate3 ? `\n《第三希望》${date3}` : "";
 
     const message =
-`【予約が入りました】
-お名前：${name}
-電話番号：${phone}
-来店回数：${visit}
-メニュー：${menu}
+`【ご予約内容】
 
-第一希望：${date1}
-第二希望：${date2}${thirdLine}`;
+《お名前》${name}
+《電話番号》${phone}
+《来店回数》${visit}
+《メニュー》${menu}
+
+《第一希望》${date1}
+《第二希望》${date2}${thirdLine}`;
 
     await liff.sendMessages([
         {
